Fixing horizontal scroll

--- a/src/app/pages/episodes/episodes/episodes.component.scss
+++ b/src/app/pages/episodes/episodes/episodes.component.scss
@@ -1,7 +1,7 @@
 .image-banner {
   background-image: url("../../../../assets/studio.jpg");
   background-position:bottom;
-  height: 50vh;
+  height: 40vh;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -20,7 +20,7 @@
 }
 .episode-list {
   background-color: #121212;
-  height: 50vh;
+  height: 60vh;
   max-width: 100% !important;
   width: 100vw;
   color: white;
